@@ -1,3 +1,7 @@
+2013-06-10  Xavier Perseguers  <xavier@causal.ch>
+
+	* [TASK] Related to #48936: Add helper method to retrieve references from any extension
+
 2013-06-09  Xavier Perseguers  <xavier@causal.ch>
 
 	* [BUGFIX] #48962: Toolbar icons are misplaced on Chrome
